Build 3 February 18, 2018
=========================

1. Added new game: Diamond Hexagon


Build 2 February 14, 2018
=========================

1. Added new game: Triangle Hexagon.

2. pocico is now free and open source software. See README and COPYING for details.


Build 1 February 11, 2018
=========================

1. First release!