@@ -1,7 +1,13 @@
+Build 3-1 February 20, 2018
+===========================
+
+1. Added new game: Growable Triplets.
+
+
 Build 3 February 18, 2018
 =========================
 
-1. Added new game: Diamond Hexagon
+1. Added new game: Diamond Hexagon.
 
 
 Build 2 February 14, 2018
